# code_cademy_nlp

./: .gitignore  .pre-commit-config.yaml  presentation.md  presentation.pptx  pyproject.toml  pytest.ini  regard_cudf.py
eda_diagnosing_diabetes/: EDA Diagnosing Diabetes.ipynb
introduction_pandas_numpy/: 10_minutes_to_panda.py
nba_trends/: Codecademy_NBA_Trends_Project.ipynb  nba.sqlite
page_visits_funnel_project/: Page_Funnel_Visits.ipynb
product_defects(probabilities)/: Product Defects.ipynb
python_syntax_medical_insurance_project/: Python Syntax Medical Insurance Project.ipynb
src/build_llm_from_scratch_book/: __init__.py  dataloader.py  dataset.py  loss.py  modules.py  text.py
src/build_llm_from_scratch_book/chapter_2/: chapter_2.ipynb  chapter_2_preprocessing.ipynb  tokenizer.py
src/build_llm_from_scratch_book/chapter_2_tokenization/: chapter_2_preprocessing.ipynb  dataset.py
src/build_llm_from_scratch_book/chapter_3_attention/: __init__.py  attention.ipynb  self_attention.py
src/build_llm_from_scratch_book/chapter_4_gpt_basic/: basic_model.ipynb  models.py
src/build_llm_from_scratch_book/chapter_5_pretraining/: basic_model.ipynb  training.ipynb
src/code_cademy/product_defects(probabilities)/: Product Defects.ipynb
src/code_cademy/python_syntax_medical_insurance_project/: Python Syntax Medical Insurance Project_Solution.ipynb
src/coursera_path/: C1_W1_lecture_nb_01_preprocessing.ipynb  C1_W1_lecture_nb_01_preprocessing.py
src/coursera_path/week_1/: C1_W1_lecture_nb_01_preprocessing.ipynb  C1_W1_lecture_nb_01_preprocessing.py  utils.py
src/llama4_from_scratch_video/: __init__.py  bpe.py  softmax.py
src/nlp_book/: chapter_1.py  chapter_2.ipynb  chapter_2.py  chapter_2_sequence_diagram.md  token_example.py
src/nlp_book/chapter_2/: chapter_2.ipynb  chapter_2.py  wordpiece_tokenizers.ipynb
this_is_jeopardy/: This is Jeopardy.ipynb  This is Jeopardy_Solution.ipynb
